--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     }
 
     .jumbotron {
-             background-image: url('/img/home.jpg');
+             background-image: url('img/home.jpg');
              background-size: cover;
              background-attachment: fixed;
              background-position: center;
