--- a/index.html
+++ b/index.html
@@ -325,21 +325,21 @@
           <h2 class="card-header text-center ">Projects</h2>
           <div class="card-group ">
             <div class="card project-tile">
-              <img class="img-thumbnail img-fluid" src="/img/tributePage.jpg" alt="Card image">
+              <img class="img-thumbnail img-fluid" src="img/tributePage.jpg" alt="Card image">
               <div class="card-body">
                 <h4 class="card-title">Steve Jobs Tribute Page</h4>
               </div>
               <div class="card-footer text-center"><a href="https://arif-bit.github.io/Steve-Jobs-Tribute-Page/" class="btn btn-primary">Tribute</a></div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="/img/productLanding.png" alt="Card image">
+              <img class="card-img-top" src="img/productLanding.png" alt="Card image">
               <div class="card-body">
                 <h4 class="card-title">Product Landing Page</h4>
               </div>
               <div class="card-footer  text-center"><a href="#" class="btn btn-primary">Product Landing</a></div>
             </div>
             <div class="card">
-              <img class="card-img-top" src="/img/survey.jpg" alt="Card image">
+              <img class="card-img-top" src="img/survey.jpg" alt="Card image">
               <div class="card-body">
                 <h4 class="card-title">Survey Form</h4>
               </div>
