--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
               <blockquote class="blockquote text-center w-75 mx-auto">
                 <p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus orci massa, maximus a
                   velit sit amet, fringilla convallis tellus.</p>
-                <footer class="blockquote-footer">Jeppe Schaumburg Jensen</footer>
+                <footer class="blockquote-footer">Md. Ariful Islam</footer>
               </blockquote>
               <p class="card-text">Aenean sit amet feugiat nibh, at tempor quam. Phasellus pretium vitae urna sit amet
                 ultrices. Morbi malesuada nulla eu ipsum sagittis, nec dignissim turpis iaculis. Nullam laoreet interdum
